# Project23

./: CMakeLists.txt
F4Client/: CMakeLists.txt  functions.txt
F4Client/inc/: client_cmd.h  test.h  ui.h
F4Client/src/: client_cmd.c  main.c  ui.c
F4Server/: CMakeLists.txt  TODO.md  TODO.txt  functions.txt
F4Server/inc/: commands.h  f4logic.h  ioutils.h  serverbot.h
F4Server/include/: f4logic.h
F4Server/src/: commands.c  errExit.c  f4logic.c  f4server.c  ioutils.c  serverbot.c
F4Server/test/: f4logic_test.c
headers/: commands.h
include/: commands.h  errExit.h  f4logic.h
src/: commands.c  f4logic.c  f4server.c
